refactor: improve code quality for file renaming (#11316)
- Replace printStackTrace() with proper SLF4J logging
- Fix JavaDoc formatting in AutomaticCitationKeyGenerator
- Improve code quality in multiple files:
  - Use isEmpty() instead of size/comparison checks
  - Use String.formatted() instead of String.format()
  - Fix test method naming conventions (remove 'test' prefix)
  - Simplify ArrayList imports
  - Fix equals() parameter order (constants first)
  - Improve error logging by including exception object